--- a/config.gradle
+++ b/config.gradle
@@ -33,17 +33,17 @@ ext {
     rx_android = "2.1.1"
     rx_kotlin = "2.4.0"
     autodispose_version = "1.2.0"
-    gson = "2.8.6"
+    gson = '2.8.7'
     material_dialogs = "3.3.0"
     baseRecyclerViewAdapterHelper = "3.0.6"
     photoview = "2.3.0"
     objectboxVersion = "2.3.4"
     utilcode = "1.30.6"
-    arouter_api = "1.5.1"
-    arouter_compiler = "1.5.1"
+    arouter_api = '1.5.2'
+    arouter_compiler = '1.5.2'
     walleVersion = "1.1.7"
     easyPhotos = "3.1.3"
-    bugly_crashreport_upgrade = '1.5.1'
+    bugly_crashreport_upgrade = '1.5.23'
     bugly_nativecrashreport = '3.9.1'
     datepickerVersion = "0.3.1"
     flexbox = "2.0.1"
