--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.5.0'
+    ext.kotlin_version = '1.5.10'
     apply from: file("config.gradle")
     repositories {
         google()
@@ -13,11 +13,6 @@ buildscript {
         classpath 'com.android.tools.build:gradle:4.2.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
-        /*用于检测依赖库是否有最新版本*/
-        classpath "com.github.ben-manes:gradle-versions-plugin:${gradle_versions_plugin}"
-
-
-        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1' // Add this line
     }
 
 
@@ -25,8 +20,7 @@ buildscript {
 
 
 allprojects {
-
-    group "yuzhiqiang"
+    group "https://github.com/yuzhiqiang1993"
     repositories {
         google()
         mavenCentral()
