--- a/config.gradle
+++ b/config.gradle
@@ -47,11 +47,11 @@ ext {
     bugly_nativecrashreport = '3.9.1'
     datepickerVersion = "0.3.1"
     flexbox = "2.0.1"
-    gradle_versions_plugin = "0.36.0"
-    zxing_version = "2.2.8"
+    gradle_versions_plugin = "v0.39.0"
+    zxing_version = "2.2.9"
     jsoup_version = '1.13.1'
     leakcanary_android = "2.7"
-    bannerViewPager = "3.5.0"
+    bannerViewPager = "3.5.2"
     viewpager2 = "1.1.0-alpha01"
     roundedImageView = "0.8.4"
     signConfigs = [
