--- a/config.gradle
+++ b/config.gradle
@@ -10,9 +10,9 @@ ext {
 
     /*dependencies*/
 
-    /*AndroidX*/
+    /*AndroidX*/ 
     appcompat = '1.3.0'
-    material = "1.3.0"
+    material = '1.4.0'
     vectordrawable = "1.1.0"
     constraintlayout = "2.0.4"
     annotation = "1.2.0"
@@ -20,7 +20,7 @@ ext {
     core_ktx = '1.6.0'
     lifecycle_ktx = "2.3.1"
     collection_ktx = "1.1.0"
-    kotlinx_coroutines = '1.5.0'
+    kotlinx_coroutines = '1.5.1-native-mt'
     swiperefreshlayout = '1.1.0'
     room_version = '2.3.0'
 
@@ -49,7 +49,7 @@ ext {
     flexbox = "2.0.1"
     gradle_versions_plugin = "v0.39.0"
     zxing_version = "2.2.9"
-    jsoup_version = '1.13.1'
+    jsoup_version = '1.14.1'
     leakcanary_android = "2.7"
     bannerViewPager = "3.5.2"
     viewpager2 = "1.1.0-alpha01"
