--- a/config.gradle
+++ b/config.gradle
@@ -15,7 +15,7 @@ ext {
     material = '1.4.0'
     vectordrawable = "1.1.0"
     constraintlayout = '2.1.1'
-    annotation = "1.2.0"
+    annotation = '1.3.0'
     multiDexVersion = "2.0.1"
     core_ktx = '1.7.0'
     lifecycle_ktx = '2.4.0'
